# quantitative_derivatives_research_toolkit

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/options/: SPY_20260718T053858Z.csv  SPY_20260718T053858Z_metadata.json  SPY_20260718T060648Z.csv  SPY_20260718T060648Z_metadata.json
docs/: Black-Scholes Model.md  Cox Ross Rubenstein Model.md  Financial Derivatives.md  Glossary.md  Greeks.md  Monte Carlo Simulation.md  Options Trading.md  Project Plan.md
experiments/: market_calibration.ipynb  monte_carlo_variance_investigation.ipynb  monte_carlo_variance_rerun.ipynb
notes/: Glossary.md
reports/: spy_market_calibration_report.md
reports/crr_convergence/: crr_convergence.ipynb  crr_convergence_playground.ipynb  crr_convergence_utils.py
reports/monte_carlo/: monte_carlo_variance_rerun.ipynb  variance_investigation.md
scripts/: download_option_chain.py
src/derivative_pricing/calibration/: implied_volatility.py  option_chain.py
src/derivative_pricing/greeks/: greeks.py
src/derivative_pricing/models/: greeks.py  market.py  options.py  volatility.py
src/derivative_pricing/pricing/: black_scholes.py  black_scholes_model.py  cox_ross_rubenstein_model.py  monte_carlo_model.py
src/derivative_pricing/utils/: monte_carlo_utils.py
src/derivative_pricing/volatility/: implied_volatility.py
tests/: test_black_scholes.py  test_black_scholes_greeks.py  test_black_scholes_model.py  test_cox_ross_rubenstien_model.py  test_implied_volatility.py  test_pricing_models_with_dividend_yield.py  test_select_target_expirations.py
tests/monte_carlo/: conftest.py  test_monte_carlo.py
